# cpi

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: benchmark_file_reader.hpp  benchmark_file_reader.hpp~  cpi_benchmark.cpp  cpi_benchmark.cpp~
include/cpi/: block_tree_compression.hpp  block_tree_compression.hpp~  run_length_compression.hpp
tests/: run_length_compression_test.cpp
